# dualie

./: .gitignore  CMakeLists.txt  Cargo.toml  HARDWARE.md  PLAN.md  README.md  backup.kdl  justfile
.github/workflows/: release.yml
daemon/: Cargo.toml  known_apps.kdl
daemon/src/: apps.rs  clipboard.rs  config.rs  device.rs  file_sync.rs  git_sync.rs  input_bridge.rs  launch.rs  launch_macos.rs  lib.rs  main.rs  peer.rs  serialize.rs  status.rs  sync_engine.rs  web.rs
daemon/src/intercept/: keycodes.rs  linux.rs  macos.rs  macos_kvhd.rs  mod.rs  remap.rs  vkey_map.rs
daemon/src/platform/: linux.rs  mac.rs  mod.rs
daemon/src/web/static/: index.html
daemon/src/web/static/assets/: index-DZ2rUtRs.css  index-ay-OycRr.js
homebrew/: dualie.rb
hub/: Cargo.toml
hub/src/: main.rs  peer.rs  state.rs
proto/: Cargo.toml
proto/src/: input_proto.rs  lib.rs  paths.rs  protocol.rs  serial.rs  sync.rs  tcp.rs  transport.rs
resources/: dev.dualie.input.plist  dev.dualie.plist  dualie.service
shared/: keycodes.json
src/: cobs.c  handlers.c  keyboard.c  main.c  serial_chan.c  uart.c  usb.c  usb_descriptors.c
src/include/: cobs.h  config.h  constants.h  handlers.h  keyboard.h  main.h  misc.h  protocol.h  serial_chan.h  structs.h  tusb_config.h  usb_descriptors.h  vkeys.h
src/test/: CMakeLists.txt  run_tests.c  stubs.h  test_caps_layer.c  test_serialize.c
tui/: Cargo.toml
tui/src/: app_registry.rs  ipc.rs  main.rs  ui.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  main.js
web/src/lib/: api.js  api.test.js  hid.js
web/src/routes/: CapsLayer.svelte  ConfigPage.svelte  KeyRemaps.svelte  StatusBar.svelte  VirtualActions.svelte
