[package]
name        = "dualie"
version     = "0.1.0"
edition     = "2021"
description = "Dualie KVM switch daemon – serves config UI and dispatches virtual key actions"
license     = "GPL-3.0"

[[bin]]
name = "dualie"
path = "src/main.rs"

[dependencies]
dualie-proto = { path = "../proto" }

# Async runtime + web framework
tokio        = { workspace = true }
axum         = { version = "0.7",  features = ["macros"] }
tower        = { version = "0.4" }
tower-http   = { version = "0.5",  features = ["fs", "cors"] }

# Serialisation
serde        = { workspace = true }
serde_json   = { workspace = true }
ciborium     = { workspace = true }

# Config / storage
directories  = { version = "5" }    # platform config/data dirs

# Key interception (CGEventTap on Mac, evdev on Linux)
# unstable_grab enables event suppression on macOS via CGEventTap
rdev         = { version = "0.5", features = ["unstable_grab"] }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# CLI arguments
clap     = { version = "4", features = ["derive"] }
hostname = { version = "0.4" }

# No extra platform deps needed:
# - macOS app discovery uses Command::new("mdfind") / "defaults" / "open"
# - Linux app discovery uses std::fs to walk XDG dirs and parse .desktop files
# - rdev pulls in platform event APIs transitively

[dev-dependencies]
tokio-test  = { version = "0.4" }
