[package]
name        = "dualie"
version     = "0.1.0"
edition     = "2021"
description = "Dualie KVM switch daemon – local keyboard remapping and RP2040 serial peer"
license     = "GPL-3.0"

[[bin]]
name = "dualie"
path = "src/main.rs"

[dependencies]
dualie-proto = { path = "../proto" }

# Async runtime
tokio = { workspace = true }

# Serialisation
serde      = { workspace = true }
serde_json = { workspace = true }   # retained for `dualie convert` migration tool
ciborium   = { workspace = true }

# Config / storage
directories = { version = "5" }    # platform config/data dirs

# KDL config (Phase 2)
kdl    = { version = "6" }         # KDL document model + parser
miette = { version = "7", features = ["fancy"] }  # parse error reporting with source spans
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }  # file watcher

# Key interception — rdev still compiled in for Phase 3/4 groundwork.
# unstable_grab: CGEventTap suppression on macOS
rdev = { version = "0.5", features = ["unstable_grab"] }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# CLI arguments
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = { version = "0.4" }
