[package]
name        = "dualie-proto"
version     = "0.1.0"
edition     = "2021"
description = "Shared protocol types and traits for the Dualie hub/daemon link"
license     = "GPL-3.0"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
ciborium   = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
directories = { version = "5" }
