[package]
name        = "dualie-tui"
version     = "0.1.0"
edition     = "2021"
description = "Dualie TUI – live status and config editor"
license     = "GPL-3.0"

[[bin]]
name = "dualie-tui"
path = "src/main.rs"

[dependencies]
dualie-proto = { path = "../proto" }

# TUI
ratatui   = { version = "0.29" }
crossterm = { version = "0.28" }

# Async
tokio = { workspace = true }

# Config (read/write KDL directly)
kdl  = { version = "6" }
glob = { version = "0.3" }   # glob expansion for sync file lists

# Platform dirs (same socket path logic as daemon)
directories = { version = "5" }

# Error handling
anyhow = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }
